[tool.poetry]
name = "component-injector"
version = "1.2.0"
description = "A modern component / dependency injector for python 3.9+."
license = "MIT"
authors = ["Ingmar Steen <iksteen@gmail.com>"]
readme = "README.md"
homepage = "https://www.github.com/iksteen/component-injector"
repository = "https://www.github.com/iksteen/component-injector.git"
documentation = "https://component-injector.readthedocs.org/"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
sphinx = "^7.2.6"
sphinx_rtd_theme = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
